# sv2-tp

./: .cirrus.yml  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md  vcpkg.json
.clusterfuzzlite/: build.sh  run-cfl-helper.sh  update-coverage-landing-page.sh
.github/: ci-test-each-commit-exec.py
.github/workflows/: build-clusterfuzzlite-images.yml  ci.yml  clusterfuzzlite-batch.yml  clusterfuzzlite-build.yml  clusterfuzzlite-cron.yml  clusterfuzzlite-pr.yml  clusterfuzzlite-shared.yml
ci/lint/: 01_install.sh
ci/test/: 00_setup_env.sh  00_setup_env_arm.sh  00_setup_env_i686.sh  00_setup_env_mac_cross.sh  00_setup_env_mac_cross_intel.sh  00_setup_env_mac_native.sh  00_setup_env_native.sh  (+13 more)
cmake/: bitcoin-build-config.h.in  libmultiprocess.cmake  secp256k1.cmake
contrib/: README.md  valgrind.supp
depends/: Makefile  README.md  toolchain.cmake.in
doc/: Doxyfile.in  README.md  build-freebsd.md  build-macos.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  dependencies.md  developer-notes.md  files.md  fuzzing.md  multiprocess.md  productivity.md  release-process.md  stratum-v2.md
share/: setup.nsi.in
src/: CMakeLists.txt  chainparamsbase.cpp  clientversion.cpp  init.cpp  init.h  logging.cpp  logging.h  net.cpp  net.h  netbase.cpp  netbase.h  pubkey.h  sv2-tp.cpp  sv2-tp.rc  validation.cpp  validation.h
src/test/fuzz/: CMakeLists.txt  fuzz.cpp  key.cpp  sv2_noise.cpp  util.h
src/test/fuzz/util/: CMakeLists.txt  net.cpp  net.h
test/: CMakeLists.txt  README.md  config.ini.in
(+94 files in other folders)
